--- a/main/res/layout/activity_create_profile.xml
+++ b/main/res/layout/activity_create_profile.xml
@@ -138,7 +138,7 @@
             android:layout_marginEnd="38dp"
             android:layout_marginRight="38dp"
             android:ems="10"
-            android:inputType="textPersonName"
+            android:inputType="textCapWords"
             app:layout_constraintBottom_toBottomOf="@+id/textView8"
             app:layout_constraintEnd_toEndOf="parent" />
 
